Fix header not centered

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -16,7 +16,6 @@
   left: 50%;
   transform: translate(-50%, 0);
   /*Margin*/
-  margin: 1em;
 }
 
 .link-button {
